--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>For My Radha – Janmashtami Card</title>
+    <title>To My Radha</title>
     <style>
       :root {
         --ink: #0f172a;
@@ -397,4 +397,5 @@
     </script>
   </body>
 </html>
+
 
